--- a/src/setup/index.css
+++ b/src/setup/index.css
@@ -77,3 +77,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.predio-background{
+  background-image: url('../assets/imgs/predios.jpg');
+}
